--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11", default_features=false, features = [ "json", "rustls-tls"] }
 serde_json = "1"
+serde = { version = "1", features = ["derive"] }
 warp = { version = "0.3.0", default_features=false, features = ["tokio-rustls"] }
 futures = "0.3"
 http = "0.2.3"
