--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.4", features = ["rt-multi-thread", "macros"] }
-reqwest = { version = "0.11", default_features = false, features = ["json", "rustls-tls"] }
-serde_json = "1"
-serde = { version = "1", features = ["derive"] }
-warp = { version = "0.3.0", default_features = false, features = ["tokio-rustls"] }
-futures = "0.3"
-http = "0.2.3"
+http = "0.2"
 bytes = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+futures = { version = "0.3", default_features = false }
+tokio = { version = "1.4", default_features = false, features = ["rt-multi-thread", "macros"] }
+reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
+warp = { version = "0.3", default_features = false, features = ["tokio-rustls"] }
