--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ futures = { version = "0.3", default_features = false }
 tokio = { version = "1.4", default_features = false, features = ["rt-multi-thread", "macros"] }
 reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
 warp = { version = "0.3", default_features = false, features = ["tokio-rustls"] }
+chashmap = "2.2"
+url = "2.2"
