--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "pokemon-in-shakespeare"
 version = "0.1.0"
 authors = ["Alexander Voronov <alexander.a.voronov@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,9 +11,16 @@ http = "0.2"
 bytes = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-futures = { version = "0.3", default_features = false }
-tokio = { version = "1.4", default_features = false, features = ["rt-multi-thread", "macros"] }
-reqwest = { version = "0.11", default_features = false, features = ["rustls-tls"] }
-warp = { version = "0.3", default_features = false, features = ["tokio-rustls"] }
+futures = { version = "0.3" }
+tokio = { version = "1.4", default-features = false, features = [
+    "rt-multi-thread",
+    "macros",
+] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "rustls-tls",
+] }
+warp = { version = "0.3", default-features = false, features = [
+    "tokio-rustls",
+] }
 chashmap = "2.2"
 url = "2.2"
